java errors gone, getting launch error now though